Splitmenu: fix box overflow
git-svn-id: https://code.downthemall.net/repos/branches/2.0.x@2424 43940e1f-b481-bb45-89eb-5c6a4bf3d40a

--- a/chrome/content/common/bindings.css
+++ b/chrome/content/common/bindings.css
@@ -7,7 +7,12 @@ menu.menu-iconic {
 
 /* splitmenu */
 splitmenu {
-        -moz-binding: url(chrome://dta/content/common/bindings.xml#splitmenu);
+	-moz-binding: url(chrome://dta/content/common/bindings.xml#splitmenu);
+}
+.splitmenu-menu > .menu-text,
+.splitmenu-menu > .menu-accel-container,
+.splitmenu-menuitem > .menu-accel-container {
+	display: none;
 }
 
 /* closebox */
